# Odin

./: .gitignore  CMakeLists.txt  main.cpp
OdinApp/: CMakeLists.txt  devicelabel.cpp  devicelabel.h  mainwindow.cpp  mainwindow.ui
OdinApp/AudioManager/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  use-case.txt
OdinApp/AudioManager/.cmake/api/v1/reply/: cache-v2-8bd7d24a562cda6e72e9.json  cmakeFiles-v1-4de73c2d77c2087832b8.json  codemodel-v2-66bfb10cf373de6131af.json  directory-portaudio_folder-Debug-5c6e2e0dff6149c90710.json  index-2023-09-16T20-07-33-0527.json  target-AudioManager-Debug-2ed2256491a6ca6d0e9d.json  target-portaudio-Debug-0f234167b463ea672e57.json  target-portaudio_static-Debug-a2975a9d1792415f37cb.json  target-uninstall-Debug-076171cacced5ac11732.json
OdinApp/AudioManager/include/: AudioManager.hpp  Device.hpp  Filter.hpp
OdinApp/AudioManager/portaudio_folder/: cmake_install.cmake  cmake_uninstall.cmake  portaudio-2.0.pc
OdinApp/AudioManager/src/: AudioManager.cpp  Device.cpp  Filter.cpp
src/: AudioException.hpp  AudioManager.cpp  AudioManager.hpp  Connection.hpp  Device.cpp  Device.hpp  Filter.hpp
test/: test.cpp  test.h
